--- a/app/src/main/res/layout/explore_fragment.xml
+++ b/app/src/main/res/layout/explore_fragment.xml
@@ -6,11 +6,21 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"/>
 
-    <ListView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/categories">
+        android:orientation="vertical">
 
-    </ListView>
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/categories">
+        </ListView>
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
