Adaugat harta Google pt eveniment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000059</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorTextOrange">#FF7034</color>
+    <color name="White">#FFF</color>
 </resources>
