--- a/app/src/main/res/layout/event_description.xml
+++ b/app/src/main/res/layout/event_description.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:id="@+id/description_header"
         android:layout_width="match_parent"
+        android:background="@color/colorTextOrange"
         android:layout_height="206dp"
         android:orientation="horizontal">
 
@@ -29,10 +30,12 @@
                 android:autoSizeMinTextSize="10dp"
                 android:layout_height="88dp"
                 android:id="@+id/event_title"
+                android:textColor="@color/colorPrimary"
                 android:text="TEST TEST TEST"
                 android:textAlignment="center"
                 android:textSize="25dp"
-                android:paddingTop="20dp"/>
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"/>
 
             <Button
                 android:layout_width="match_parent"
@@ -53,6 +56,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/description_body"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -169,11 +173,21 @@
                 android:layout_marginTop="10dp"
                 android:textStyle="italic"
                 android:paddingLeft="20dp"
-                android:paddingRight="15dp"
+                android:paddingRight="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/event_description"
                 android:textSize="20dp"/>
+
+            <com.google.android.gms.maps.MapView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/event_map"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"/>
 
 
         </LinearLayout>
