--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,21 +10,57 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
-        />
+        >
 
-   <com.google.android.material.bottomnavigation.BottomNavigationView
-       android:id="@+id/navigation_view"
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_weight="1"
-       android:background="@color/colorPrimary"
-       app:itemBackground="@color/colorPrimary"
-       app:itemIconTint="@android:color/white"
-       app:itemTextColor="@android:color/white"
-       app:layout_constraintTop_toTopOf="parent"
-       app:menu="@menu/navigation">
 
-   </com.google.android.material.bottomnavigation.BottomNavigationView>
+        <LinearLayout
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="User Registration"
+                android:id="@+id/textView"
+                android:layout_gravity="center_horizontal"/>
+
+            <EditText
+                android:layout_margin="15dp"
+                android:hint="Enter your email"
+                android:id="@+id/editTextEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:layout_margin="15dp"
+                android:inputType="textPassword"
+                android:hint="Enter your password"
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            
+            <Button
+                android:layout_margin="15dp"
+                android:id="@+id/buttonRegister"
+                android:text="Register User"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            
+            <TextView
+                android:gravity="center"
+                android:text="Already Registered? Sign in here"
+                android:id="@+id/textSignIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            
+        </LinearLayout>
+
+
+    </FrameLayout>
 
 
 
