--- a/app/src/main/res/layout/explore_fragment.xml
+++ b/app/src/main/res/layout/explore_fragment.xml
@@ -12,10 +12,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ListView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:text="TESTESTESTEST"
+            android:id="@+id/textAllCategories"
+            android:textColor="#FFFFFF"
+            android:gravity="center"
+            android:textSize="40dp"
+            android:textStyle="bold"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
             android:id="@+id/categories">
         </ListView>
 
