Adaugat search si optimizat sa mearga cum trebuie, reparat buguri pe backstack

--- a/app/src/main/res/layout/event_list_fragment.xml
+++ b/app/src/main/res/layout/event_list_fragment.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:id="@+id/textViewSearch"
+        android:textColor="@color/colorPrimary"
+        android:clickable="true"
+        android:paddingLeft="20dp"
+        android:hint="Search event"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        ></EditText>
+
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
         android:id="@+id/event_list"></ListView>
 
-</RelativeLayout>
+</LinearLayout>
