--- a/app/src/main/res/layout/event_description.xml
+++ b/app/src/main/res/layout/event_description.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:id="@+id/description_header"
         android:layout_width="match_parent"
-        android:background="@color/colorTextOrange"
+        android:background="@drawable/event_description_header_selector"
         android:layout_height="206dp"
         android:orientation="horizontal">
 
@@ -38,12 +38,13 @@
                 android:paddingBottom="20dp"/>
 
             <Button
+                android:background="@drawable/button_selector"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="BOOK TICKET"
                 android:textSize="22dp"
-                android:background="@color/colorPrimary"
                 android:textColor="@color/colorTextOrange"
+                android:id="@+id/buyButton"
                 android:textStyle="bold"/>
 
 
