Adaugat trimiterea mailului de confirmare a platii + mail de verificare la inregistrarea contului pt aplicatie

--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -6,7 +6,9 @@
     <com.braintreepayments.cardform.view.CardForm
         android:id="@+id/card_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"/>
 
     <Button
         android:id="@+id/btnBuy"
