Terminat aplicaia clientului versiunea 1 (explore + profile); de adaugat optional history daca mai e timp

--- a/app/src/main/res/drawable/event_description_header_selector.xml
+++ b/app/src/main/res/drawable/event_description_header_selector.xml
@@ -5,7 +5,7 @@
             <item>
                 <shape>
                     <gradient android:angle="270"
-                        android:endColor="@color/colorTextOrange" android:startColor="#ff4500" />
+                        android:endColor="@color/colorTextOrange" android:startColor="#FF7F50" />
                 </shape>
             </item>
         </layer-list>
