--- a/app/src/main/res/layout/event_description_fragment.xml
+++ b/app/src/main/res/layout/event_description_fragment.xml
@@ -12,16 +12,19 @@
 
         <ImageView
             android:id="@+id/event_image"
-            android:layout_width="176dp"
+            android:layout_width="0dp"
+            android:layout_weight="5"
             android:layout_height="176dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp" />
 
         <LinearLayout
-            android:layout_width="176dp"
+            android:layout_width="0dp"
+            android:layout_weight="5"
             android:layout_height="176dp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:orientation="vertical">
 
             <TextView
