--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorTextOrange">#FF6347</color>
     <color name="White">#FFF</color>
-    <color name="graylight">#d3d3d3</color>
+    <color name="graylight">#fafafa</color>
 </resources>
